Record printer installations in PrinterInstalled.

We assumed that we could record installations in UpdatePrinter.  However,
when PrinterInstalled began to imply UpdatePrinter, this prevented the
installation from being logged because the printer had already been saved
to storage.

Bug: 773890
Change-Id: I68684fb70d983e89933b81fcc4936b82848438c9
Reviewed-on: https://chromium-review.googlesource.com/731763
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sean Kau <skau@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510645}
Former-commit-id: 789165cc23cf63cc850fd5940e985d0d045248ba